[package]
name = "glean-mcp-test"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
async-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["process", "rt"], optional = true }

[lints.clippy]
# Pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }
# Nursery lints for experimental but useful checks
nursery = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }
# Style lints
style = { level = "warn", priority = -1 }
# Complexity lints
complexity = { level = "warn", priority = -1 }
# Correctness lints (highest priority)
correctness = { level = "deny", priority = -1 }

# Specific lint overrides
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
